crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-missing-yields_DOC402_google.py_ignore_one_line.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC402 `yield` is not documented in docstring
 --> DOC402_google.py:3:5
  |
1 |   # DOC402
2 |   def foo(num: int) -> str:
3 | /     """
4 | |     Do something
5 | |
6 | |     Args:
7 | |         num (int): A number
8 | |     """
  | |_______^
9 |       yield 'test'
help: Add a "Yields" section to the docstring

DOC402 `yield` is not documented in docstring
  --> DOC402_google.py:44:9
   |
42 |       # DOC402
43 |       def bar(self) -> str:
44 | /         """
45 | |         Do something
46 | |
47 | |         Args:
48 | |             num (int): A number
49 | |         """
   | |___________^
50 |           yield 'test'
help: Add a "Yields" section to the docstring
